--- a/little-lemon_capstone/little-lemon/src/components/SpecialSection.css
+++ b/little-lemon_capstone/little-lemon/src/components/SpecialSection.css
@@ -1,47 +1,3 @@
-.special {
-    flex: 0 0 20rem;
-    display: grid;
-    grid-template-areas: 
-        "img img"
-        "title price"
-        "description description"
-        "order order";
-    grid-template-columns: 1fr auto;
-    grid-template-rows: 1fr 0.2fr 0.3fr 0.2fr;
-    width: 20rem;
-    border-radius: 16px;
-    /* box-shadow: 2px 2px 5px #000; */
-    row-gap: 3px;
-}
-
-.special img {
-    grid-area: img;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.special h3 {
-    grid-area: title;
-}
-
-.special h4 {
-    grid-area: price;
-    color: #EE9972;
-}
-
-.special p {
-    grid-area: description;
-    max-height: 60px;
-    overflow-y: scroll;
-    scrollbar-width: thin;
-    -webkit-overflow-scrolling: touch;
-}
-
-.special span {
-    grid-area: order;
-}
-
 .grid-ss {
     display: grid;
     grid-template-columns: 1fr auto;
@@ -51,6 +7,7 @@
     row-gap: 5vh;
     padding-top: 27vh;
     margin-bottom: 2vh;
+    width: 100vw;
 }
 
 .grid-ss > h1 {
@@ -70,19 +27,20 @@
     overflow-x: auto;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    -webkit-overflow-scrolling: touch;
 }
 
 @media screen and (max-width: 800px) {
 
     .grid-ss {
         grid-template-columns: auto;
-        grid-template-areas: 
+        grid-template-areas:
             "title title"
             "button button"
             "specials specials";
-        text-align: center;
     }
     .grid-ss > button {
-        justify-self: center;
+        align-self: center;
+        text-align: center;
     }
 }
