--- a/little-lemon_capstone/little-lemon/src/pages/Reservation.css
+++ b/little-lemon_capstone/little-lemon/src/pages/Reservation.css
@@ -5,7 +5,7 @@
         "stitle stitle"
         "reserve image";
     gap: 25px;
-    padding-top: 4vh;
+    padding-top: 7vh;
     padding-bottom: 6vh;
 }
 
